# rpi-pico-template-nix

./: CMakeLists.txt  Makefile  README.md  default.nix  main.c
